configs/DeplAndServ.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-conf-v1
  labels:
    app: conf-server-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: conf-server-app
  template:
    metadata:
      labels:
        app: conf-server-app
    spec:
      containers:
        - name: conf-server-app
          image: conf_server
          imagePullPolicy: Never
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: conf-service
spec:
  selector:
    app: conf-server-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8888
