configs/IngressTest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
    - host: app.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kuber-service-v1
                port:
                  number: 80
          - pathType: Prefix
            path: /test
            backend:
              service:
                name: conf-service-test
                port:
                  number: 8080
